# vocab-rust

./: CODEOWNERS  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
src/: main.rs
src/lib/: lib.rs  parsers.rs
vocab_fetcher/: Cargo.toml
vocab_fetcher/src/: main.rs
wordreference_scraper/: Cargo.toml
wordreference_scraper/src/: lib.rs  tests.rs
