[package]
name = "vocab_rust"
version = "0.1.0"
edition = "2021"
authors = ["Grant Lemons <grant0lemons@gmail.com>"]

[dependencies]
reqwest = "0.11.14"
scraper = "0.14.0"
tokio = { version = "1.25.0", features = ["full"] }

[[bin]]
name = "vocab_completer"
path = "src/main.rs"

[lib]
name = "wordreference"
path = "src/lib/lib.rs"
